# Visual_Internal_Odometry

第一章 摡述与课程介绍/: README.md
第一章 摡述与课程介绍/chapter1_ws/: CMakeLists.txt
第一章 摡述与课程介绍/chapter1_ws/src/: update_Quaterniond_SO3.cpp
第二章 IMU传感器/: README.md
第二章 IMU传感器/homework_chapter2/vio_data_simulation/main/: gener_alldata.cpp
第二章 IMU传感器/homework_chapter2/vio_data_simulation/src/: imu.cpp  imu.h
第二章 IMU传感器/homework_chapter2/vio_sim_ws/devel/: .catkin  .rosinstall  setup.sh
第二章 IMU传感器/homework_chapter2/vio_sim_ws/devel/lib/pkgconfig/: vio_data_simulation.pc
第二章 IMU传感器/homework_chapter2/vio_sim_ws/devel/lib/vio_data_simulation/: vio_data_simulation_node  vio_data_simulation_node_txt
第二章 IMU传感器/homework_chapter2/vio_sim_ws/devel/share/vio_data_simulation/cmake/: vio_data_simulationConfig.cmake
第二章 IMU传感器/homework_chapter2/vio_sim_ws/src/vio_data_simulation-ros_version/src/: param.h
课程资料/: hub_token.md
课程资料/ubuntu-setup/: README.md
课程资料/vio课程环境搭建说明文档/: README.md
